# evl4-dsc

./: .gitignore  Dockerfile  README.md  config.json.example  docker-compose.yml  main.py  nginx.conf.example  pyproject.toml  run.sh
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
static/: index.html  script.js  style.css
